# goldman-back

./: .gitignore  Dockerfile  diffs_api.py  get_diff.py  main.py  openai.py  package-lock.json  pyproject.toml  summarize_ai.py  summrarize_with_ai.py  test.md  utils.py
